# terminal_football_manager

./: .gitignore  LICENSE  README.md  pyproject.toml
terminal_football_manager/: constants.py  fut_data.py  fut_mode.py  game_logic.py  main.py  models.py  persistence.py  player_career.py
